--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".base.BaseFragmentActivity"></activity>
+        <activity android:name="com.syswin.msgseal.mixstack.BaseFragmentActivity"></activity>
     </application>
 
 </manifest>
