--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,5 +25,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:0.5'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:2.2.2'
-    implementation project(':mixstack')
+    api project(':mixstack')
+    annotationProcessor project(':RouteProcessor')
+    compile project(path: ':RouteProcessor')
 }
