--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:0.5'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:2.2.2'
-    api project(':mixstack')
+    api project(':PageNavigation')
     annotationProcessor project(':RouteProcessor')
     compile project(path: ':RouteProcessor')
 }
