--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "com.example.zhengmin.mixstack"
+        applicationId "com.example.zhengmin.navigation"
         minSdkVersion 19
         targetSdkVersion 26
         versionCode 1
