--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.zhengmin.mixstack">
+    package="com.example.zhengmin.navigation">
 
     <application
         android:name=".MixStackApplication"
@@ -17,7 +17,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.syswin.msgseal.mixstack.BaseFragmentActivity"></activity>
+        <activity android:name="com.syswin.msgseal.navigation.BaseFragmentActivity"></activity>
     </application>
 
 </manifest>
