--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
             </intent-filter>
         </activity>
         <activity android:name="com.syswin.msgseal.navigation.FragmentContainerActivity" />
-        <activity android:name=".activity.MainActivity2"></activity>
+        <activity android:name=".activity.MainActivity2" />
+        <activity android:name=".activity.MainActivity3"></activity>
     </application>
 
 </manifest>
